--- a/index.html
+++ b/index.html
@@ -2,64 +2,71 @@
 layout: default
 ---
 <!------------------------------- Header banner ------------------------------->
-<section class="p-5p">
-  <h1 class="uppercase text-3xl sm:text-4xl md:text-6xl pb-3 font-bold"> This is a <br> fun heading </h1>
+<section class="p-5p bg-gray-900/40 bg-blend-multiply bg-[url('https://source.unsplash.com/body-of-water-near-mountain-view-r6FU8zqrgdM')] min-h-70 bg-cover bg-center">
+  <h1 class="font-serif text-3xl sm:text-4xl md:text-6xl pb-3 font-normal text-gray-200"> Hockyetravels to <br> USA & Canada </h1>
 
-  <div class="bg-[url('/images/moody-1.jpg')] min-h-50 m-w-full bg-cover bg-center"></div>
-
-  <div class="grid grid-cols-3 md:grid-cols-6 text-center md:text-left pt-5p">
-    <div class="uppercase">
-      <span> Fact: </span>
-      <span class="font-bold block text-3xl"> 900 </span>
+  <div class="grid grid-cols-3 gap-10 text-center items-center md:text-left pt-5p uppercase text-gray-200">
+    <div class="border border-gray-400 p-5p">
+      <a href="#"> Standard experience </a>
+      <p> </p>
     </div>
-    <div class="uppercase">
-      <span> Fact: </span>
-      <span class="font-bold block text-3xl"> Y2K </span>
+    <div class="border border-gray-400 p-5p">
+      <a href="#"> Gold experience </a>
+      <p> </p>
     </div>
-    <div class="uppercase">
-      <span> Fact: </span>
-      <span class="font-bold block text-3xl"> 420K </span>
-    </div>
-    <div class="col-span-3 px-2 my-5 md:my-0">
-      <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Id explicabo animi necessitatibus dignissimos, aliquid veritatis nostrum facilis. Sint dolorum nisi quas unde asperiores non, animi commodi minima molestias officiis aliquid. Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, nam illum! Magni esse. </p>
+    <div class="border border-gray-400 p-5p">
+      <a href="#"> Diamond experience </a>
+      <p> </p>
     </div>
   </div>
+
+    <div class="px-2 my-5 md:my-0 text-center text-gray-200">
+      <p> Choose how long and how many things you want </p>
+    </div>
 </section>
 
 <!------------------------------- Image grid ------------------------------->
 <section class="p-5p pt-0">
   <div class="flex justify-center">
     <div class="max-w-md text-center"> 
-      <h2 class="font-black text-3xl sm:text-4xl md:text-6xl uppercase leading-[0.45] sm:leading-[0.45] md:leading-[0.45] pb-5"> Another <br> <span class="font-normal text-2xl"> Sick Heading for attention </span> </h2>
+      <h2 class="font-black text-2xl sm:text-3xl md:text-5xl uppercase leading-[0.45] sm:leading-[0.45] md:leading-[0.45] pb-5"> Memories <br> <span class="font-normal text-2xl"> for a lifetime </span> </h2>
       <p class="pb-5"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis est, obcaecati corrupti sunt numquam ducimus vitae eveniet? Nostrum eligendi distinctio hic accusantium illum! Quam quasi itaque dignissimos necessitatibus nulla accusantium? </p>
     </div>
   
   </div>
-  <div class="grid sm:grid-cols-2 md:grid-cols-3 gap-2">
-      
-       <div class="pb-100p relative">
-          <img src="/images/moody-2.jpg" class="absolute object-cover h-full w-full">
-      </div>
-      <div class="pb-100p relative">
-          <img src="/images/moody-3.jpg" class="absolute object-cover h-full w-full">
-      </div>
-      <div class="pb-100p relative">
-          <img src="/images/moody-4.jpg" class="absolute object-cover h-full w-full">
-      </div>
-      <div class="pb-100p relative">
-          <img src="/images/moody-5.jpg" class="absolute object-cover h-full w-full">
-      </div>
-      <div class="pb-100p relative">
-          <img src="/images/moody-6.jpg" class="absolute object-cover h-full w-full">
-      </div>
-      <div class="pb-100p relative">
-          <img src="/images/moody-7.jpg" class="absolute object-cover h-full w-full">
-          <img src="" class="absolute object-cover h-full w-full">
-      </div>
+  
+  <div class="grid sm:grid-cols-2 md:grid-cols-4 gap-2 mb-4">
+    <div class="pb-100p relative">
+      <img src="https://images.unsplash.com/photo-1580748141549-71748dbe0bdc?q=80&w=2063&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="absolute object-cover h-full w-full">
+    </div>
+    <div class="pb-100p relative">
+      <img src="https://images.unsplash.com/photo-1607863400985-8d3bc50e3fd6?q=80&w=3175&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="absolute object-cover h-full w-full">
+    </div>
+    <div class="pb-100p relative">
+      <img src="https://images.unsplash.com/photo-1514511719-9f5849dc16d0?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTl8fGhvY2tleXxlbnwwfHwwfHx8MA%3D%3D" class="absolute object-cover h-full w-full">
+    </div>
+    <div class="pb-100p relative">
+      <img src="https://images.unsplash.com/photo-1580748163492-12ac3bea3aae?q=80&w=2079&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="absolute object-cover h-full w-full">
+    </div>
+  </div>
+  
+  <div class="grid sm:grid-cols-2 md:grid-cols-4 gap-2">
+    <div class="pb-100p relative">
+       <img src="https://images.unsplash.com/photo-1517177646641-83fe10f14633?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzR8fGhvY2tleXxlbnwwfHwwfHx8MA%3D%3D" class="absolute object-cover h-full w-full">
+    </div>
+    <div class="pb-100p relative">
+        <img src="https://images.unsplash.com/photo-1561917488-91aa9bc0a3a7?q=80&w=2976&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="absolute object-cover h-full w-full">
+    </div>
+    <div class="pb-100p relative">
+        <img src="https://images.unsplash.com/photo-1551439920-01aa95ce4469?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="absolute object-cover h-full w-full">
+    </div>
+    <div class="pb-100p relative">
+        <img src="https://images.unsplash.com/photo-1583168926317-002764927dea?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="absolute object-cover h-full w-full">
+    </div>
   </div> 
 
   <div class="text-center p-5p">
-    <a href="" class="uppercase border p-2 bg-black text-white px-8 py-2"> Sign up </a>
+    <a href="" class="uppercase border p-2 bg-gray-500 text-white px-8 py-2"> Read more about our travels </a>
   </div>
 </section>
 
@@ -72,12 +79,30 @@ layout: default
       <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam, minima aspernatur ducimus quis temporibus vel fugiat accusantium harum doloremque nihil ea quos rerum modi asperiores, odit deserunt ipsam? At, officia? </p>
       <p class="mt-5p"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae ratione id dolor sequi ducimus praesentium, eum deserunt ad ut maxime, cupiditate omnis consectetur quia dignissimos rem obcaecati maiores similique velit. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum, fugit laudantium. Nam voluptatum velit nostrum non quisquam. Et doloribus nesciunt iure deserunt facere vitae harum sapiente accusamus. Porro, esse rerum. </p>
       <div class="pt-10p md:pt-15p max-w-lg">
-        <a href="" class="uppercase border p-2 bg-black text-white px-8 py-2"> Sign up </a>
+        <a href="" class="uppercase border p-2 bg-black text-white px-8 py-2 bg-gray-500"> Sign up </a>
       </div>
     </div>
     <div class="flex">
-      <div class="bg-[url('/images/moody-8.jpg')] bg-cover bg-center pb-100p grow"></div>
+      <div class="bg-[url('https://source.unsplash.com/ice-hockey-players-on-ice-hockey-field-W7t3cNm8LXk')] bg-cover bg-center pb-100p grow"></div>
       <p class="vertical-text rotate-180 italic text-left" > Credit: Some legend </p>
+    </div>
+  </div>
+</section>
+
+<section class="p-5p pt-0 text-center md:text-left">
+  <h2 class="uppercase text-3xl sm:text-4xl md:text-6xl mb-5p font-bold"> This is a <br> fun heading </h2>
+  <div class="grid md:grid-cols-2 gap-10 justify-center">
+    <div class="flex">
+      <div class="bg-[url('https://source.unsplash.com/ice-hockey-players-on-ice-hockey-field-W7t3cNm8LXk')] bg-cover bg-center pb-100p grow"></div>
+      <p class="vertical-text rotate-180 italic text-left" > Credit: Some legend </p>
+    </div>
+    <div class="max-w-lg">
+      <h3 class="uppercase mb-5p font-black"> Another <br> <span class="border-t-2 font-normal pt-1 border-black"> Sick Heading for attention </span></h3>
+      <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam, minima aspernatur ducimus quis temporibus vel fugiat accusantium harum doloremque nihil ea quos rerum modi asperiores, odit deserunt ipsam? At, officia? </p>
+      <p class="mt-5p"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae ratione id dolor sequi ducimus praesentium, eum deserunt ad ut maxime, cupiditate omnis consectetur quia dignissimos rem obcaecati maiores similique velit. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum, fugit laudantium. Nam voluptatum velit nostrum non quisquam. Et doloribus nesciunt iure deserunt facere vitae harum sapiente accusamus. Porro, esse rerum. </p>
+      <div class="pt-10p md:pt-15p max-w-lg">
+        <a href="" class="uppercase border p-2 bg-black text-white px-8 py-2 bg-gray-500"> Sign up </a>
+      </div>
     </div>
   </div>
 </section>
