--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <!------------------------------- Header banner ------------------------------->
 <section class="p-5p bg-gray-900/40 bg-blend-multiply bg-[url('https://source.unsplash.com/body-of-water-near-mountain-view-r6FU8zqrgdM')] min-h-70 bg-cover bg-center">
-  <h1 class="font-serif text-3xl sm:text-4xl md:text-6xl pb-3 font-normal text-gray-200"> Hockyetravels to <br> USA & Canada </h1>
+  <h1 class="font-serif text-3xl sm:text-4xl md:text-6xl pb-3 font-normal text-gray-200"> Hockyetravels to <br> USA and Canada </h1>
 
   <div class="grid grid-cols-3 gap-10 text-center items-center md:text-left pt-5p uppercase text-gray-200">
     <div class="border border-gray-400 p-5p">
@@ -26,7 +26,7 @@ layout: default
 </section>
 
 <!------------------------------- Image grid ------------------------------->
-<section class="p-5p pt-0">
+<section class="p-5p pb-0">
   <div class="flex justify-center">
     <div class="max-w-md text-center"> 
       <h2 class="font-black text-2xl sm:text-3xl md:text-5xl uppercase leading-[0.45] sm:leading-[0.45] md:leading-[0.45] pb-5"> Memories <br> <span class="font-normal text-2xl"> for a lifetime </span> </h2>
@@ -71,7 +71,7 @@ layout: default
 </section>
 
 <!------------------------------- Fun heading section ------------------------------->
-<section class="p-5p pt-0 text-center md:text-left">
+<section class="p-5p text-center md:text-left bg-gray-300">
   <h2 class="uppercase text-3xl sm:text-4xl md:text-6xl mb-5p font-bold"> This is a <br> fun heading </h2>
   <div class="grid md:grid-cols-2 gap-10 justify-center">
     <div class="max-w-lg">
@@ -89,7 +89,7 @@ layout: default
   </div>
 </section>
 
-<section class="p-5p pt-0 text-center md:text-left">
+<section class="p-5p pt-0 text-center md:text-left bg-gray-300">
   <h2 class="uppercase text-3xl sm:text-4xl md:text-6xl mb-5p font-bold"> This is a <br> fun heading </h2>
   <div class="grid md:grid-cols-2 gap-10 justify-center">
     <div class="flex">
@@ -108,16 +108,16 @@ layout: default
 </section>
 
 <!------------------------------- Big text banner ------------------------------->
-<section class="uppercase text-[4.5vw] leading-none text-center p-5p">
-  <div class="border-t border-b border-black p-5p">
-    <p class="px-15p font-bold"> Sometimes all you need is a big random block of text to really drive home the point. </p>
+<section class="uppercase text-[4.5vw] leading-none text-center px-5p">
+  <div class="p-5p">
+    <p class="px-15p font-serif"> Sometimes all you need is a big random block of text to really drive home the point. </p>
   </div>
 </section>
 
 <!------------------------------- Text section ------------------------------->
-<section class="grid md:grid-cols-[5rem,1fr] gap-1 p-5p">
+<section class="grid md:grid-cols-[5rem,1fr] gap-1 p-5p bg-gray-300">
   <div> 
-    <h2 class="vertical-text-desktop md:rotate-180 font-bold uppercase text-6xl"> Gallery </h2>
+    <h2 class="vertical-text-desktop md:rotate-180 font-serif uppercase text-6xl"> Gallery </h2>
   </div>
   <div>
     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil voluptate nisi dicta repellendus libero recusandae sequi incidunt odio voluptatem! Animi amet, suscipit nesciunt modi aliquam facilis explicabo maxime asperiores aperiam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa in atque quam aliquid earum iste, voluptatum consequuntur eos molestiae repellendus. </p>
@@ -148,7 +148,7 @@ layout: default
 <!------------------------------- Contact us ------------------------------->
 <section class="p-5p">
   <div class="border-t-2 border-black p-5p"></div>
-  <h2 class="text-3xl sm:text-4xl md:text-6xl uppercase font-bold"> Contact us. </h2>
+  <h2 class="text-3xl sm:text-4xl md:text-6xl uppercase font-serif"> Contact us. </h2>
 
   <div class="grid md:grid-cols-2 gap-10 md:gap-5 border-b border-black pb-10p">
       <form>
