--- a/index.html
+++ b/index.html
@@ -2,66 +2,68 @@
 layout: default
 ---
 <!------------------------------- Header banner ------------------------------->
-<section class="p-5p bg-gray-900/40 bg-blend-multiply bg-[url('https://source.unsplash.com/body-of-water-near-mountain-view-r6FU8zqrgdM')] min-h-70 bg-cover bg-center">
-  <h1 class="font-serif text-3xl sm:text-4xl md:text-6xl pb-3 font-normal text-gray-200"> Hockyetravels to <br> USA and Canada </h1>
+<section class="p-5p bg-gray-900/40 bg-blend-multiply bg-[url('https://source.unsplash.com/white-and-gray-rabbit-on-black-table-fLj1a73qCB0')] min-h-70 bg-cover flex flex-col justify-between bg-center">
+  <h1 class="font-serif text-3xl sm:text-4xl md:text-6xl pb-3 text-gray-200"> Rescued bunnies <br> and care </h1>
 
-  <div class="grid grid-cols-3 gap-10 text-center items-center md:text-left pt-5p uppercase text-gray-200">
-    <div class="border border-gray-400 p-5p">
-      <a href="#"> Standard experience </a>
+  <div class="grid grid-cols-3 gap-y-2 gap-x-10 text-center items-center md:text-left pt-5p uppercase text-gray-200">
+    <div class="border border-gray-400 p-5p text-center">
+      <a href="#"> Take care of your bunny </a>
       <p> </p>
     </div>
-    <div class="border border-gray-400 p-5p">
-      <a href="#"> Gold experience </a>
+    <div class="border border-gray-400 p-5p text-center">
+      <a href="#"> Get your cuddles </a>
       <p> </p>
     </div>
-    <div class="border border-gray-400 p-5p">
-      <a href="#"> Diamond experience </a>
+    <div class="border border-gray-400 p-5p text-center">
+      <a href="#"> Rescue a bunny </a>
       <p> </p>
+    </div>
+    
+    <div class="px-2 text-center text-gray-200 col-span-3">
+      <p> Every bunny need a lovely and safe home </p>
     </div>
   </div>
 
-    <div class="px-2 my-5 md:my-0 text-center text-gray-200">
-      <p> Choose how long and how many things you want </p>
-    </div>
+  
 </section>
 
 <!------------------------------- Image grid ------------------------------->
 <section class="p-5p pb-0">
   <div class="flex justify-center">
     <div class="max-w-md text-center"> 
-      <h2 class="font-black text-2xl sm:text-3xl md:text-5xl uppercase leading-[0.45] sm:leading-[0.45] md:leading-[0.45] pb-5"> Memories <br> <span class="font-normal text-2xl"> for a lifetime </span> </h2>
-      <p class="pb-5"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis est, obcaecati corrupti sunt numquam ducimus vitae eveniet? Nostrum eligendi distinctio hic accusantium illum! Quam quasi itaque dignissimos necessitatibus nulla accusantium? </p>
+      <h2 class="font-black text-2xl sm:text-3xl md:text-5xl uppercase leading-[0.45] sm:leading-[0.45] md:leading-[0.45] pb-5 text-gray-500"> Make your <br> <span class="font-serif text-2xl"> bunny your best friend </span> </h2>
+      <p class="pb-5 font-sans"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis est, obcaecati corrupti sunt numquam ducimus vitae eveniet? Nostrum eligendi distinctio hic accusantium illum! Quam quasi itaque dignissimos necessitatibus nulla accusantium? </p>
     </div>
   
   </div>
   
   <div class="grid sm:grid-cols-2 md:grid-cols-4 gap-2 mb-4">
     <div class="pb-100p relative">
-      <img src="https://images.unsplash.com/photo-1580748141549-71748dbe0bdc?q=80&w=2063&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="absolute object-cover h-full w-full">
+      <img src="https://images.unsplash.com/photo-1619447257726-fe312296ee9b?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8YnVubnl8ZW58MHx8MHx8fDA%3D" class="absolute object-cover h-full w-full">
     </div>
     <div class="pb-100p relative">
-      <img src="https://images.unsplash.com/photo-1607863400985-8d3bc50e3fd6?q=80&w=3175&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="absolute object-cover h-full w-full">
+      <img src="https://images.unsplash.com/photo-1535241749838-299277b6305f?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fGJ1bm55fGVufDB8fDB8fHww" class="absolute object-cover h-full w-full">
     </div>
     <div class="pb-100p relative">
-      <img src="https://images.unsplash.com/photo-1514511719-9f5849dc16d0?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTl8fGhvY2tleXxlbnwwfHwwfHx8MA%3D%3D" class="absolute object-cover h-full w-full">
+      <img src="https://images.unsplash.com/photo-1580762410711-aa47eb8872d7?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="absolute object-cover h-full w-full">
     </div>
     <div class="pb-100p relative">
-      <img src="https://images.unsplash.com/photo-1580748163492-12ac3bea3aae?q=80&w=2079&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="absolute object-cover h-full w-full">
+      <img src="https://images.unsplash.com/photo-1599169713100-120531cef331?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTh8fGJ1bm55fGVufDB8fDB8fHww" class="absolute object-cover h-full w-full">
     </div>
   </div>
   
   <div class="grid sm:grid-cols-2 md:grid-cols-4 gap-2">
     <div class="pb-100p relative">
-       <img src="https://images.unsplash.com/photo-1517177646641-83fe10f14633?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzR8fGhvY2tleXxlbnwwfHwwfHx8MA%3D%3D" class="absolute object-cover h-full w-full">
+       <img src="https://images.unsplash.com/photo-1610734607943-1ed26ad75863?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjJ8fGJ1bm55fGVufDB8fDB8fHww" class="absolute object-cover h-full w-full">
     </div>
     <div class="pb-100p relative">
-        <img src="https://images.unsplash.com/photo-1561917488-91aa9bc0a3a7?q=80&w=2976&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="absolute object-cover h-full w-full">
+        <img src="https://images.unsplash.com/photo-1622349789797-c847ee0b3a2f?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjN8fGJ1bm55fGVufDB8fDB8fHww" class="absolute object-cover h-full w-full">
     </div>
     <div class="pb-100p relative">
-        <img src="https://images.unsplash.com/photo-1551439920-01aa95ce4469?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="absolute object-cover h-full w-full">
+        <img src="https://images.unsplash.com/photo-1576103765851-dd115bcd6744?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjR8fGJ1bm55fGVufDB8fDB8fHww" class="absolute object-cover h-full w-full">
     </div>
     <div class="pb-100p relative">
-        <img src="https://images.unsplash.com/photo-1583168926317-002764927dea?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="absolute object-cover h-full w-full">
+        <img src="https://images.unsplash.com/photo-1589933767411-38a58367efd7?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzJ8fGJ1bm55fGVufDB8fDB8fHww" class="absolute object-cover h-full w-full">
     </div>
   </div> 
 
@@ -71,11 +73,11 @@ layout: default
 </section>
 
 <!------------------------------- Fun heading section ------------------------------->
-<section class="p-5p text-center md:text-left bg-gray-300">
-  <h2 class="uppercase text-3xl sm:text-4xl md:text-6xl mb-5p font-bold"> This is a <br> fun heading </h2>
+<section class="p-5p text-center md:text-left bg-pink-200">
+  <h2 class="uppercase text-3xl sm:text-4xl md:text-6xl mb-5p font-serif"> Rescue a <br> bunny </h2>
   <div class="grid md:grid-cols-2 gap-10 justify-center">
     <div class="max-w-lg">
-      <h3 class="uppercase mb-5p font-black"> Another <br> <span class="border-t-2 font-normal pt-1 border-black"> Sick Heading for attention </span></h3>
+      <h3 class="uppercase mb-5p font-serif"> Help us <br> <span class="border-t-2 pt-1 border-gray-400"> save more bunnies </span></h3>
       <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam, minima aspernatur ducimus quis temporibus vel fugiat accusantium harum doloremque nihil ea quos rerum modi asperiores, odit deserunt ipsam? At, officia? </p>
       <p class="mt-5p"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae ratione id dolor sequi ducimus praesentium, eum deserunt ad ut maxime, cupiditate omnis consectetur quia dignissimos rem obcaecati maiores similique velit. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum, fugit laudantium. Nam voluptatum velit nostrum non quisquam. Et doloribus nesciunt iure deserunt facere vitae harum sapiente accusamus. Porro, esse rerum. </p>
       <div class="pt-10p md:pt-15p max-w-lg">
@@ -83,21 +85,21 @@ layout: default
       </div>
     </div>
     <div class="flex">
-      <div class="bg-[url('https://source.unsplash.com/ice-hockey-players-on-ice-hockey-field-W7t3cNm8LXk')] bg-cover bg-center pb-100p grow"></div>
+      <div class="bg-[url('https://images.unsplash.com/photo-1537330937885-671c6d316721?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NTV8fGJ1bm55fGVufDB8fDB8fHww')] rounded-full bg-cover bg-bottom pb-100p grow"></div>
       <p class="vertical-text rotate-180 italic text-left" > Credit: Some legend </p>
     </div>
   </div>
 </section>
 
-<section class="p-5p pt-0 text-center md:text-left bg-gray-300">
-  <h2 class="uppercase text-3xl sm:text-4xl md:text-6xl mb-5p font-bold"> This is a <br> fun heading </h2>
+<section class="p-5p text-center md:text-left bg-gray-300">
+  <h2 class="uppercase text-3xl sm:text-4xl md:text-6xl mb-5p font-serif"> This is a <br> fun heading </h2>
   <div class="grid md:grid-cols-2 gap-10 justify-center">
     <div class="flex">
-      <div class="bg-[url('https://source.unsplash.com/ice-hockey-players-on-ice-hockey-field-W7t3cNm8LXk')] bg-cover bg-center pb-100p grow"></div>
+      <div class="bg-[url('https://images.unsplash.com/photo-1529040181623-e04ebc611e25?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NTl8fGJ1bm55fGVufDB8fDB8fHww')] rounded-full bg-cover bg-center pb-100p grow"></div>
       <p class="vertical-text rotate-180 italic text-left" > Credit: Some legend </p>
     </div>
     <div class="max-w-lg">
-      <h3 class="uppercase mb-5p font-black"> Another <br> <span class="border-t-2 font-normal pt-1 border-black"> Sick Heading for attention </span></h3>
+      <h3 class="uppercase mb-5p font-serif"> Another <br> <span class="border-t-2  pt-1 border-gray-400"> Sick Heading for attention </span></h3>
       <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam, minima aspernatur ducimus quis temporibus vel fugiat accusantium harum doloremque nihil ea quos rerum modi asperiores, odit deserunt ipsam? At, officia? </p>
       <p class="mt-5p"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae ratione id dolor sequi ducimus praesentium, eum deserunt ad ut maxime, cupiditate omnis consectetur quia dignissimos rem obcaecati maiores similique velit. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum, fugit laudantium. Nam voluptatum velit nostrum non quisquam. Et doloribus nesciunt iure deserunt facere vitae harum sapiente accusamus. Porro, esse rerum. </p>
       <div class="pt-10p md:pt-15p max-w-lg">
@@ -117,7 +119,7 @@ layout: default
 <!------------------------------- Text section ------------------------------->
 <section class="grid md:grid-cols-[5rem,1fr] gap-1 p-5p bg-gray-300">
   <div> 
-    <h2 class="vertical-text-desktop md:rotate-180 font-serif uppercase text-6xl"> Gallery </h2>
+    <h2 class="vertical-text-desktop md:rotate-180 font-serif uppercase text-6xl text-pink-400"> Gallery </h2>
   </div>
   <div>
     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil voluptate nisi dicta repellendus libero recusandae sequi incidunt odio voluptatem! Animi amet, suscipit nesciunt modi aliquam facilis explicabo maxime asperiores aperiam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa in atque quam aliquid earum iste, voluptatum consequuntur eos molestiae repellendus. </p>
@@ -131,35 +133,36 @@ layout: default
 
 <!------------------------------- Gallery section ------------------------------->
 <section class="flex gap-5 items-center">
-  <div class="">
-    <img src="/images/moody-9.jpg" class="">
+  <div class="grow basis-[1px]">
+    <img src="https://images.unsplash.com/photo-1590521757325-064bb580b750?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTIzfHxidW5ueXxlbnwwfHwwfHx8MA%3D%3D" class="">
   </div>
-  <div class="">
-    <img src="/images/moody-10.jpg" class="">
+  <div class="grow-[2] basis-[1px]">
+    <img src="https://images.unsplash.com/photo-1553986641-deec79e48bb6?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTI3fHxidW5ueXxlbnwwfHwwfHx8MA%3D%3D" class="">
   </div>
-  <div class="">
-    <img src="/images/moody-11.jpg" class="">
+  <div class="grow basis-[1px]">
+    <img src="https://images.unsplash.com/photo-1590521757325-064bb580b750?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTIzfHxidW5ueXxlbnwwfHwwfHx8MA%3D%3D" class="">
   </div>
-  <div class="">
-    <img src="/images/moody-12.jpg" class="">
+  <div class="grow-[2] basis-[1px]">
+    <img src="https://images.unsplash.com/photo-1511542229800-663a99ca1817?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="">
   </div>
+
 </section>
 
 <!------------------------------- Contact us ------------------------------->
-<section class="p-5p">
+<section class="p-5p bg-gray-300">
   <div class="border-t-2 border-black p-5p"></div>
-  <h2 class="text-3xl sm:text-4xl md:text-6xl uppercase font-serif"> Contact us. </h2>
 
   <div class="grid md:grid-cols-2 gap-10 md:gap-5 border-b border-black pb-10p">
       <form>
+          <h2 class="text-3xl sm:text-4xl md:text-6xl uppercase font-serif"> Contact us. </h2>
           <label for="name"> Name </label>
           <input id="name" name="name" class="m-3 ml-0 border-2" type="text">
           <label for="email"> Email </label>
           <input id="email" name="email" type="email" class="m-3 ml-0 border-2">
           <label for="message"> Message </label>
           <textarea name="message" id="message" cols="40" rows="10" class="m-3 ml-0 border-2"></textarea>
-          <input type="submit" value="SEND IT BABY" class="bg-black text-white w-min ml-auto cursor-pointer">
+          <input type="submit" value="SEND IT BABY" class="bg-gray-500 text-white w-min ml-auto cursor-pointer">
       </form>
-      <div class="bg-[url('/images/moody-13.jpg')] pb-100p bg-cover bg-center"></div>
+      <div class="bg-[url('https://images.unsplash.com/photo-1578164252938-1da0cd4caa30?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Njh8fGJ1bm55fGVufDB8fDB8fHww')] rounded-[3rem] pb-100p bg-cover bg-center"></div>
   </div>
 </section>
