--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <!------------------------------- Header banner ------------------------------->
-<section class="p-5p bg-gray-900/40 bg-blend-multiply bg-[url('https://source.unsplash.com/white-and-gray-rabbit-on-black-table-fLj1a73qCB0')] min-h-70 bg-cover flex flex-col justify-between bg-center">
+<section class="p-5p bg-gray-900/40 bg-blend-multiply bg-[url('https://source.unsplash.com/white-and-gray-rabbit-on-black-table-fLj1a73qCB0')] min-h-80 bg-cover flex flex-col justify-between bg-center">
   <h1 class="font-serif text-3xl sm:text-4xl md:text-6xl pb-3 text-gray-200"> Rescued bunnies <br> and care </h1>
 
   <div class="grid grid-cols-3 gap-y-2 gap-x-10 text-center items-center md:text-left pt-5p uppercase text-gray-200">
@@ -74,7 +74,7 @@ layout: default
 
 <!------------------------------- Fun heading section ------------------------------->
 <section class="p-5p text-center md:text-left bg-pink-200">
-  <h2 class="uppercase text-3xl sm:text-4xl md:text-6xl mb-5p font-serif"> Rescue a <br> bunny </h2>
+  <h2 class="uppercase text-3xl sm:text-4xl md:text-6xl mb-5p font-serif"> Adopt a <br> bunny </h2>
   <div class="grid md:grid-cols-2 gap-10 justify-center">
     <div class="max-w-lg">
       <h3 class="uppercase mb-5p font-serif"> Help us <br> <span class="border-t-2 pt-1 border-gray-400"> save more bunnies </span></h3>
