--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ layout: default
 </section>
 
 <!------------------------------- Gallery section ------------------------------->
-<section class="flex gap-5 items-center">
+<section class="flex gap-5 items-center overflow-x-scroll">
   <div class="grow basis-[1px]">
     <img src="https://images.unsplash.com/photo-1590521757325-064bb580b750?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTIzfHxidW5ueXxlbnwwfHwwfHx8MA%3D%3D" class="">
   </div>
@@ -145,7 +145,6 @@ layout: default
   <div class="grow-[2] basis-[1px]">
     <img src="https://images.unsplash.com/photo-1511542229800-663a99ca1817?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="">
   </div>
-
 </section>
 
 <!------------------------------- Contact us ------------------------------->
