--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ layout: default
 
 <!------------------------------- Contact us ------------------------------->
 <section class="p-5p bg-gray-300">
-  <div class="border-t-2 border-black p-5p"></div>
+  <div class="border-t-2 border-gray-500 p-5p"></div>
 
   <div class="grid md:grid-cols-2 gap-10 md:gap-5 border-b border-black pb-10p">
       <form>
