--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@ layout: default
   <h2 class="uppercase text-3xl sm:text-4xl md:text-6xl mb-5p font-serif"> This is a <br> fun heading </h2>
   <div class="grid md:grid-cols-2 gap-10 justify-center">
     <div class="flex">
-      <div class="bg-[url('https://images.unsplash.com/photo-1529040181623-e04ebc611e25?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NTl8fGJ1bm55fGVufDB8fDB8fHww')] rounded-full bg-cover bg-center pb-100p grow"></div>
       <p class="vertical-text rotate-180 italic text-left" > Credit: Some legend </p>
+      <div class="bg-[url('https://images.unsplash.com/photo-1529040181623-e04ebc611e25?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NTl8fGJ1bm55fGVufDB8fDB8fHww')] rounded-full bg-cover bg-center pb-100p grow"></div>
     </div>
     <div class="max-w-lg">
       <h3 class="uppercase mb-5p font-serif"> Another <br> <span class="border-t-2  pt-1 border-gray-400"> Sick Heading for attention </span></h3>
@@ -132,17 +132,17 @@ layout: default
 </section>
 
 <!------------------------------- Gallery section ------------------------------->
-<section class="flex gap-5 items-center overflow-x-scroll">
-  <div class="grow basis-[1px]">
+<section class="flex gap-5 items-center overflow-x-scroll bg-gray-300 p-5p">
+  <div class="shrink-0 basis-1/3">
     <img src="https://images.unsplash.com/photo-1590521757325-064bb580b750?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTIzfHxidW5ueXxlbnwwfHwwfHx8MA%3D%3D" class="">
   </div>
-  <div class="grow-[2] basis-[1px]">
+  <div class="shrink-0 basis-1/3">
     <img src="https://images.unsplash.com/photo-1553986641-deec79e48bb6?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTI3fHxidW5ueXxlbnwwfHwwfHx8MA%3D%3D" class="">
   </div>
-  <div class="grow basis-[1px]">
-    <img src="https://images.unsplash.com/photo-1590521757325-064bb580b750?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTIzfHxidW5ueXxlbnwwfHwwfHx8MA%3D%3D" class="">
+  <div class="shrink-0 basis-1/3">
+    <img src="https://images.unsplash.com/photo-1585110396000-c9ffd4e4b308?q=80&w=3087&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="">
   </div>
-  <div class="grow-[2] basis-[1px]">
+  <div class="shrink-0 basis-1/3">
     <img src="https://images.unsplash.com/photo-1511542229800-663a99ca1817?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="">
   </div>
 </section>
